--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@apollo/react-hooks": "^3.1.5",
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "apollo-boost": "^0.4.9",
     "apollo-link-context": "^1.0.20",
     "graphql": "^15.1.0",
@@ -15,7 +16,9 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-dice-complete": "^1.2.0",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.11.5",
     "react-leaflet": "^2.7.0",
+    "react-material-ui-form-validator": "^2.1.1",
     "react-motion": "^0.5.2",
     "react-native-paper": "^3.3.0",
     "react-redux": "^7.2.0",
